@@ -500,6 +500,7 @@ LIB_VERSION="1:0:0"
 AC_SUBST(LIB_VERSION)
 
 AC_CONFIG_HEADERS(config.h)
+AC_CONFIG_HEADERS(unixodbc_conf.h)
 
 AC_OUTPUT( Makefile \
     extras/Makefile \
@@ -541,5 +542,5 @@ AC_OUTPUT( Makefile \
     )
 
 dnl Attempt to add version information to libraries generated by libtool
-sed '/archive_expsym_cmds=/s/{ global/VERS_3.52 {global/' < libtool > libtool.tmp; mv libtool.tmp libtool
+dnl sed '/archive_expsym_cmds=/s/{ global/VERS_3.52 {global/' < libtool > libtool.tmp; mv libtool.tmp libtool
 
